// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should also render actions with a description matching the query 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <div
    className="web-api-domain-actions"
  >
    <Action
      action={
        Object {
          "description": "foobar",
          "key": "foo",
        }
      }
      domain={
        Object {
          "actions": Array [
            Object {
              "description": "foobar",
              "key": "foo",
            },
            Object {
              "key": "bar",
            },
            Object {
              "key": "baz",
            },
          ],
          "path": "api",
        }
      }
      showDeprecated={false}
    />
    <Action
      action={
        Object {
          "key": "bar",
        }
      }
      domain={
        Object {
          "actions": Array [
            Object {
              "description": "foobar",
              "key": "foo",
            },
            Object {
              "key": "bar",
            },
            Object {
              "key": "baz",
            },
          ],
          "path": "api",
        }
      }
      showDeprecated={false}
    />
  </div>
</div>
`;

exports[`should not render deprecated actions 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <div
    className="web-api-domain-actions"
  />
</div>
`;

exports[`should not render internal actions 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <div
    className="web-api-domain-actions"
  />
</div>
`;

exports[`should render deprecated actions 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <div
    className="web-api-domain-actions"
  >
    <Action
      action={
        Object {
          "deprecatedSince": "5.0",
          "key": "foo",
        }
      }
      domain={
        Object {
          "actions": Array [
            Object {
              "deprecatedSince": "5.0",
              "key": "foo",
            },
          ],
          "path": "api",
        }
      }
      showDeprecated={true}
    />
  </div>
</div>
`;

exports[`should render internal actions 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <div
    className="web-api-domain-actions"
  >
    <Action
      action={
        Object {
          "internal": true,
          "key": "foo",
        }
      }
      domain={
        Object {
          "actions": Array [
            Object {
              "internal": true,
              "key": "foo",
            },
          ],
          "path": "api",
        }
      }
      showInternal={true}
    />
  </div>
</div>
`;

exports[`should render only actions matching the query 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <div
    className="web-api-domain-actions"
  >
    <Action
      action={
        Object {
          "key": "foo",
        }
      }
      domain={
        Object {
          "actions": Array [
            Object {
              "key": "foo",
            },
            Object {
              "key": "bar",
            },
          ],
          "path": "api",
        }
      }
    />
  </div>
</div>
`;
